<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="image_banner">Image Poster</string>
    <string name="title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="top_credits">Top Casts</string>
    <string name="overview">Overview</string>
    <string name="general">General</string>
    <string name="release">Release:</string>
    <string name="vote_average">Average</string>
    <string name="ratting_max">/10</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="image_poster">Image Poster</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="_20_januari_2000">20 Januari 2000</string>
    <string name="_10">10</string>
</resources>