<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:scrollbars="vertical"
    tools:context=".ui.movie.MovieFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pb_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/colorFont"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/now_playing"
            android:textColor="@color/colorFont"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            tools:listitem="@layout/item_now_playing" />

        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/upcoming"
            android:textColor="@color/colorFont"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_upcoming"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_popular" />

        <TextView
            android:id="@+id/tv_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/popular"
            android:textColor="@color/colorFont"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_upcoming" />

    </LinearLayout>

</ScrollView>